[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"  

[project]
name = "black_scholes"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]